Fix quality gate